--- a/app/src/main/res/menu/activity_user_dashboard_drawer.xml
+++ b/app/src/main/res/menu/activity_user_dashboard_drawer.xml
@@ -8,7 +8,7 @@
             android:title="Home" />
         <item
             android:id="@+id/orders"
-            android:icon="@drawable/cart"
+            android:icon="@drawable/ic_menu_gallery"
             android:title="My Orders" />
         <item
             android:id="@+id/favourite"
@@ -20,7 +20,7 @@
             android:title="My Profile" />
         <item
             android:id="@+id/logout"
-            android:icon="@drawable/logout"
+            android:icon="@drawable/ic_menu_gallery"
             android:title="Logout" />
     </group>
 
