--- a/app/src/main/res/menu/user_dashboard.xml
+++ b/app/src/main/res/menu/user_dashboard.xml
@@ -7,8 +7,9 @@
         android:title="@string/action_settings"
         app:showAsAction="never" />
     <item android:id="@+id/search"
-        android:title="Mexican Green Crust Pizza)"
         android:icon="@drawable/ic_search"
         app:showAsAction="always"
-        android:actionViewClass="android.widget.SearchView" />
+        app:actionViewClass="android.support.v7.widget.SearchView"
+        android:title="search_view"
+        />
 </menu>
