improved UI for elements

--- a/app/src/main/res/layout/my_food_list_view_item.xml
+++ b/app/src/main/res/layout/my_food_list_view_item.xml
@@ -17,7 +17,7 @@
             app:civ_border_color="#3f51b5"
             android:layout_marginLeft="10dp"
             android:layout_marginTop="10dp"
-            android:src="@drawable/pizza-icon"
+            android:src="@drawable/pizzaicon"
             android:id="@+id/pizza_symbol"/>
         <TextView
             android:layout_width="wrap_content"
