--- a/app/src/main/res/layout/my_food_list_view_item.xml
+++ b/app/src/main/res/layout/my_food_list_view_item.xml
@@ -15,6 +15,7 @@
             android:layout_height="70dp"
             app:civ_border_width="2dp"
             app:civ_border_color="#3f51b5"
+            android:background="#fff"
             android:layout_marginLeft="10dp"
             android:layout_marginTop="10dp"
             android:src="@drawable/pizzaicon"
