--- a/app/src/main/res/layout/food_list.xml
+++ b/app/src/main/res/layout/food_list.xml
@@ -5,9 +5,6 @@
     android:id="@+id/parent"
     android:background="#e6e6e6"
     xmlns:android="http://schemas.android.com/apk/res/android">
-    <ScrollView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent">
 
         <RelativeLayout
             android:layout_width="match_parent"
@@ -68,7 +65,7 @@
             </RelativeLayout>
             <RelativeLayout
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
+                android:layout_height="match_parent"
                 android:layout_marginTop="6dp"
                 android:layout_marginRight="8dp"
                 android:layout_marginLeft="8dp"
@@ -94,7 +91,6 @@
             </RelativeLayout>
 
         </RelativeLayout>
-    </ScrollView>
 
     </RelativeLayout>
 
