improved UI particulrs

--- a/app/src/main/res/layout/food_list.xml
+++ b/app/src/main/res/layout/food_list.xml
@@ -12,58 +12,13 @@
 
             <RelativeLayout
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginLeft="8dp"
-                android:layout_marginRight="8dp"
-                android:layout_marginTop="5dp"
-                android:id="@+id/select_duration_for_history"
-                android:background="#fff">
-
-                <Button
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginLeft="5dp"
-                    android:textStyle="bold"
-                    android:text="Week"
-                    android:background="#fff"
-                    android:id="@+id/week"/>
-                <Button
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:background="#fff"
-                    android:id="@+id/month"
-                    android:textStyle="bold"
-                    android:text="Month"
-                    android:layout_toRightOf="@+id/week"/>
-                <Button
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:textStyle="bold"
-                    android:background="#fff"
-                    android:text="Year"
-                    android:id="@+id/year"
-                    android:layout_toRightOf="@+id/month"/>
-                <Button
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:background="#fff"
-                    android:textStyle="bold"
-                    android:text="Bonus"
-                    android:id="@+id/bonus"
-                    android:layout_marginRight="5dp"
-                    android:layout_toRightOf="@+id/year"/>
-            </RelativeLayout>
-            <RelativeLayout
-                android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:layout_marginTop="6dp"
-                android:layout_marginRight="8dp"
-                android:layout_marginLeft="8dp"
-                android:layout_below="@+id/select_duration_for_history"
+                android:layout_margin="5dp"
                 android:background="#fff">
                 <ListView
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
+                    android:padding="10dp"
                     android:id="@+id/list_view_history">
                 </ListView>
 
