--- a/app/src/main/res/layout/one_item_particulars.xml
+++ b/app/src/main/res/layout/one_item_particulars.xml
@@ -8,8 +8,7 @@
     <ScrollView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:id="@+id/scroll"
-        >
+        android:id="@+id/scroll">
 
         <RelativeLayout
             android:layout_width="match_parent"
@@ -82,7 +81,7 @@
                         <ImageView
                             android:layout_width="0dp"
                             android:layout_height="match_parent"
-                            android:layout_weight="0.15"
+                            android:layout_weight="0.12"
                             android:src="@drawable/share"
                             android:background="#fff"/>
                         <Button
