--- a/app/src/main/res/layout/one_item_particulars.xml
+++ b/app/src/main/res/layout/one_item_particulars.xml
@@ -43,6 +43,7 @@
                     android:layout_centerHorizontal="true"
                     android:layout_below="@+id/user_profile_photo"
                     android:text="Napoli Pizza"
+                    android:textColor="#303F9F"
                     android:textSize="24sp"
                     android:textStyle="bold" />
 
@@ -53,6 +54,7 @@
                     android:layout_below="@+id/user_profile_name"
                     android:layout_centerHorizontal="true"
                     android:layout_marginTop="12dp"
+                    android:textColor="#303F9F"
                     android:text="200 ₹"
                     android:textSize="14sp" />
             </RelativeLayout>
@@ -132,6 +134,7 @@
                 android:layout_height="wrap_content"
                 android:layout_below="@+id/select_options"
                 android:padding="5dp"
+                android:id="@+id/description"
                 android:layout_marginTop="-4dp"
                 android:orientation="vertical">
 
@@ -148,8 +151,7 @@
                         android:padding="5dp"
                         android:text="Available At"
                         android:textSize="15dp"
-                        android:textStyle="bold"
-                        android:textColor="#000"/>
+                        android:textColor="#303F9F"/>
 
                     <LinearLayout
                         android:layout_width="match_parent"
@@ -188,8 +190,7 @@
                         android:padding="10dp"
                         android:text="Ingredients"
                         android:textSize="15dp"
-                        android:textStyle="bold"
-                        android:textColor="#000"/>
+                        android:textColor="#303F9F"/>
 
                     <LinearLayout
                         android:layout_width="match_parent"
@@ -215,7 +216,68 @@
 
             </LinearLayout>
 
+            <RelativeLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_below="@id/description"
+                android:layout_margin="5dp"
+                android:background="#fff"
+                android:layout_marginBottom="20dp">
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="Ratings $ Reviews"
+                    android:id="@+id/rate"/>
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:id="@+id/main_content_ratings"
+                    android:layout_marginRight="0.5dp"
+                    android:layout_below="@+id/rate">
+                    <LinearLayout
+                        android:layout_width="0dp"
+                        android:layout_height="wrap_content"
+                        android:orientation="horizontal"
+                        android:layout_weight="1">
+                        <RelativeLayout
+                            android:layout_width="match_parent"
+                            android:layout_height="match_parent">
+                            <TextView
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:text="4.2"
+                                android:textSize="30dp"
+                                android:id="@+id/star_val"
+                                android:textColor="#000"
+                                />
+                            <ImageView
+                                android:layout_width="30dp"
+                                android:layout_height="30dp"
+                                android:layout_below="@id/star_val"
+                                android:src="@drawable/star"/>
+                        </RelativeLayout>
+
+                    </LinearLayout>
+                    <LinearLayout
+                        android:layout_width="0dp"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="1"
+                        android:layout_marginLeft="0.5dp">
+                    </LinearLayout>
+                </LinearLayout>
+
+                <Button
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_below="@+id/main_content_ratings"
+                    android:text="Rate and write a review"
+                    android:textColor="#000"
+                    android:elevation="5dp"
+                    android:textStyle="bold"/>
+            </RelativeLayout>
+
         </RelativeLayout>
+
     </ScrollView>
 
     <LinearLayout
@@ -237,5 +299,6 @@
             android:textColor="#fff"
             android:background="#3f51b5"/>
     </LinearLayout>
+
 
 </RelativeLayout>
