--- a/app/src/main/res/layout/calorie_content.xml
+++ b/app/src/main/res/layout/calorie_content.xml
@@ -6,26 +6,44 @@
     android:background="#e6e6e6">
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:padding="5dp"
+        android:layout_height="wrap_content"
+        android:layout_margin="10dp"
         android:background="#fff"
+        android:padding="5dp"
         android:orientation="vertical">
+
         <com.github.mikephil.charting.charts.PieChart
             android:layout_width="match_parent"
             android:layout_marginTop="-20dp"
-            android:padding="5dp"
+            android:layout_marginLeft="10dp"
+            android:layout_marginRight="10dp"
+            android:padding="10dp"
             android:layout_height="400dp"
             android:id="@+id/fat_protein">
         </com.github.mikephil.charting.charts.PieChart>
-        <TextView
+
+        <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Calories : 205"
-            android:layout_marginTop="20dp"
-            android:textAlignment="center"
-            android:textColor="#fff"
-            android:background="#3f51b5"
-            />
+            android:orientation="vertical"
+            android:layout_marginTop="10dp"
+            android:layout_margin="10dp"
+            android:background="#fff">
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:elevation="5dp"
+                android:text="Calories : 205"
+                android:padding="10dp"
+                android:textSize="20dp"
+                android:textAlignment="center"
+                android:textColor="#000"
+                android:background="#e6e6e6"
+                android:layout_marginBottom="10dp"
+                />
+
+        </LinearLayout>
+
     </LinearLayout>
 
 </RelativeLayout>
