--- a/app/src/main/res/layout/user_ratings_reviews.xml
+++ b/app/src/main/res/layout/user_ratings_reviews.xml
@@ -26,6 +26,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:progressBackgroundTint="#3f51b5"
+            android:id="@+id/rating_bar"
             android:numStars="5"
             android:layout_margin="10dp"/>
     </LinearLayout>
@@ -54,6 +55,7 @@
             android:layout_marginLeft="5dp"
             android:layout_marginRight="5dp"
             android:lines="3"
+            android:id="@+id/user_review"
             android:hint="Write Here..."
             android:gravity="start"
             android:maxLines="5"/>
@@ -64,6 +66,7 @@
             android:layout_marginBottom="10dp"
             android:layout_marginLeft="5dp"
             android:layout_marginRight="5dp"
+            android:id="@+id/send_review"
             android:padding="5dp"
             android:text="Submit"
             android:background="#3f51b5"
